--- a/DEMNet.Sample/DEMNet.Sample.csproj
+++ b/DEMNet.Sample/DEMNet.Sample.csproj
@@ -34,7 +34,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0014" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharpGLTF\src\SharpGLTF.Toolkit\SharpGLTF.Toolkit.csproj" />
   </ItemGroup>
 
 
